crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_projects_repair.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"projects\", \"repair\", \"--help\"])"
---
$ engramdb projects repair --help
exit: 0
--- stdout ---
Re-key this project's registration to the ID it hashes to today.

Adding a git remote after `engramdb init` changes the project's ID, so the registry keeps pointing at the old one: memories vanish from queries, group subscriptions detach, and personal memories become invisible. This migrates the registry entry (preserving subscriptions and worktree links), carries the personal memories across, and rebuilds the index.

Usage: engramdb projects repair [OPTIONS]

Options:
  -f, --force
          Skip confirmation prompt

      --no-index
          Re-key only — skip the index rebuild and re-embedding

      --format <FORMAT>
          Output format

          Possible values:
          - pretty: Human-friendly colored output with formatting
          - json:   JSON output for programmatic parsing
          - plain:  Plain text output without colors

      --json
          Output as JSON

  -q, --quiet
          Suppress non-essential output

  -v, --verbose
          Verbose output

      --no-color
          No colored output

      --dir <DIR>
          Working directory (default: current directory)

      --embedding-backend <EMBEDDING_BACKEND>
          Embedding backend: auto, onnx, or ollama

      --in-process
          Force in-process model loading — never contact the shared embedding daemon. Equivalent to setting ENGRAMDB_IN_PROCESS=1

      --spawn-daemon
          Spawn the shared embedding daemon if it is not already running, then route through it. By default the CLI only uses a daemon that is already running (connect-only)

      --no-maintenance
          Skip the automatic main-worktree maintenance pass (orphan-project cleanup + a quick store health check) for this invocation. Equivalent to setting ENGRAMDB_DISABLE_AUTO_MAINTENANCE=1

  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
