crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_reindex.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"reindex\", \"--help\"])"
---
$ engramdb reindex --help
exit: 0
--- stdout ---
Rebuild index and re-embed memories

Usage: engramdb reindex [OPTIONS]

Options:
      --embeddings-only
          Only re-embed, don't rebuild index

      --index-only
          Only rebuild index, don't re-embed

      --archive-only
          Rebuild the conversation search rows from the stored transcript copies instead of touching memories. Mirrors `--embeddings-only`: a rebuild of one index, from bytes that were kept verbatim so a better reduction is always a re-derivation away

      --dry-run
          Report what a reindex would rebuild, without changing anything
          
          The exact, unbudgeted currency check: every memory file is hashed against the digest its index row was built from, and — when an embedding provider is available — every memory's would-be embedding input is hashed against the digest stored with its vectors. This is the only surface that reports stale *vectors*; `doctor` has no engine and so can only report content drift.

      --global
          Reindex the global (cross-project) memory store instead of the current project

      --format <FORMAT>
          Output format

          Possible values:
          - pretty: Human-friendly colored output with formatting
          - json:   JSON output for programmatic parsing
          - plain:  Plain text output without colors

      --json
          Output as JSON

  -q, --quiet
          Suppress non-essential output

  -v, --verbose
          Verbose output

      --no-color
          No colored output

      --dir <DIR>
          Working directory (default: current directory)

      --embedding-backend <EMBEDDING_BACKEND>
          Embedding backend: auto, onnx, or ollama

      --in-process
          Force in-process model loading — never contact the shared embedding daemon. Equivalent to setting ENGRAMDB_IN_PROCESS=1

      --spawn-daemon
          Spawn the shared embedding daemon if it is not already running, then route through it. By default the CLI only uses a daemon that is already running (connect-only)

      --no-maintenance
          Skip the automatic main-worktree maintenance pass (orphan-project cleanup + a quick store health check) for this invocation. Equivalent to setting ENGRAMDB_DISABLE_AUTO_MAINTENANCE=1

  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
